--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,7 +1,9 @@
+@import '../../global.scss';
+
 .topbar {
   width: 100%;
   height: 70px;
-  background-color: rgb(26, 56, 56);
+  background-color: $mainColor;
   position: fixed;
   top: 0;
   z-index: 2;
