finished Intro page styling. Updated colors.

--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -1,3 +1,6 @@
+@import '../../global.scss';
+
 .testimonials {
-  background-color: lightcoral;
+  // background-color: lightcoral;
+  background-color: $colorFour;
 }
