--- a/src/global.scss
+++ b/src/global.scss
@@ -1,2 +1,10 @@
-// 1f2421  216869  49a078  9cc5a1  dce1de
-$mainColor: #1f2421;
+// 003049  d62828  f77f00  fcbf49  eae2b7
+$mainColor: #003049;
+
+$colorTwo: #d62828;
+
+$colorThree: #f77f00;
+
+$colorFour: #fcbf49;
+
+$colorFive: #eae2b7;
