--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,3 +1,6 @@
+@import '../../global.scss';
+
 .contact {
-  background-color: lightblue;
+  // background-color: lightblue;
+  background-color: $colorFive;
 }
