--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,3 +1,7 @@
+@import '../../global.scss';
+
 .works {
-  background-color: lightgreen;
+  // background-color: lightgreen;
+  background-color: $colorThree;
+  color: white;
 }
