--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -22,7 +22,7 @@
     margin: 0;
     padding: 0;
     list-style: none;
-    font-size: 30px;
+    font-size: 30px !important;
     font-weight: 200;
     color: white;
     width: 60%;
@@ -31,7 +31,7 @@
       margin-bottom: 25px;
 
       a {
-        font-size: inherit;
+        font-size: 30px;
         color: inherit;
         text-decoration: none;
       }
