--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -2,5 +2,98 @@
 
 .contact {
   // background-color: lightblue;
-  background-color: $colorFive;
+  background-color: white;
+  display: flex;
+
+  @include mobile {
+    flex-direction: column;
+  }
+
+  .left {
+    flex: 1;
+    overflow: hidden;
+    margin-left: 150px;
+
+    @include mobile {
+      display: none;
+    }
+
+    img {
+      height: 100%;
+      width: 900px;
+      transform: rotate(20deg);
+    }
+  }
+
+  .right {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    h2 {
+      font-size: 30px;
+    }
+
+    form {
+      width: 70%;
+      height: 70%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+
+      @include mobile {
+        justify-content: start;
+      }
+
+      input {
+        width: 300px;
+        height: 30px;
+        font-size: 14px;
+
+        @include mobile {
+          width: 200px;
+          height: 20px;
+          margin: 10px 0;
+        }
+      }
+
+      textarea {
+        width: 300px;
+        height: 200px;
+        font-size: 14px;
+
+        @include mobile {
+          width: 200px;
+          height: 100px;
+          margin-bottom: 10px;
+        }
+      }
+
+      button {
+        width: 150px;
+        height: 30px;
+        background-color: $mainColor;
+        color: white;
+        border-radius: 10px;
+        border: none;
+        font-weight: 500;
+        cursor: pointer;
+
+        @include mobile {
+          margin-bottom: 10px;
+        }
+
+        &:focus {
+          outline: none;
+        }
+      }
+
+      span {
+        color: rgb(43, 182, 43);
+      }
+    }
+  }
 }
