--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -14,6 +14,10 @@
     position: absolute;
     cursor: pointer;
 
+    @include mobile {
+      display: none;
+    }
+
     &.left {
       left: 100px;
     }
@@ -31,6 +35,12 @@
     left: 0;
     transition: all 1s ease-out;
 
+    @include mobile {
+      height: 100vh;
+      flex-direction: column;
+      justify-content: center;
+    }
+
     .container {
       width: 100vw;
       display: flex;
@@ -46,6 +56,12 @@
         align-items: center;
         justify-content: center;
         color: black;
+
+        @include mobile {
+          width: 80%;
+          height: 150px;
+          margin: 15px 0;
+        }
 
         .left {
           flex: 4;
@@ -69,17 +85,34 @@
               align-items: center;
               justify-content: center;
 
+              @include mobile {
+                width: 20px;
+                height: 20px;
+              }
+
               img {
                 width: 25px;
+
+                @include mobile {
+                  width: 15px;
+                }
               }
             }
 
             h2 {
               font-size: 20px;
+
+              @include mobile {
+                font-size: 13px;
+              }
             }
 
             p {
               font-size: 13px;
+
+              @include mobile {
+                display: none;
+              }
             }
 
             span {
