--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -42,7 +42,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: space-around;
+      // justify-content: space-around;
 
       @include mobile {
         justify-content: start;
@@ -52,6 +52,7 @@
         width: 300px;
         height: 30px;
         font-size: 14px;
+        margin: 15px 0;
 
         @include mobile {
           width: 200px;
@@ -64,6 +65,8 @@
         width: 300px;
         height: 200px;
         font-size: 14px;
+        margin-top: 5px;
+        margin-bottom: 10px;
 
         @include mobile {
           width: 200px;
@@ -81,6 +84,7 @@
         border: none;
         font-weight: 500;
         cursor: pointer;
+        margin-bottom: 10px;
 
         @include mobile {
           margin-bottom: 10px;
