--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -1,17 +1,43 @@
 @import '../../global.scss';
 
 .testimonials {
-  // background-color: lightcoral;
   background-color: $colorFour;
   display: flex;
   flex-direction: column;
   align-items: center;
 
   h1 {
-    font-size: 50px;
+    font-size: 3em;
+    margin: 15px 0;
 
     @include mobile {
       font-size: 20px;
+    }
+  }
+
+  .container {
+    width: 70%;
+    margin-top: 20px;
+
+    p {
+      font-size: 1.5em;
+      padding: 10px;
+
+      @include mobile {
+        font-size: 1em;
+      }
+    }
+
+    .top {
+      #pic1 {
+        float: left;
+        border-radius: 10px;
+        margin: 5px 10px 5px 0;
+
+        @include mobile {
+          display: none;
+        }
+      }
     }
   }
 }
